# llm-wiki

./: .gitignore  CHAT_BRANCH.md  LICENSE  README.md  SKILL.md  config.example.yaml  config.yaml  design-qa.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  app_logging.py  config.py  middleware.py  search_sync.py  server.py  utils.py
backend/api/: __init__.py  chat.py  graph.py  ingest.py  knowledge.py  search.py
db/: README.md  schema.chat.mysql.sql  schema.chat.sql  schema.mysql.sql  schema.sqlite.sql
frontend/: index.html
frontend/css/: styles.css
frontend/js/: boot.js  chat.js  core.js  eval.js  graph.js  ingest-batch.js  ingest.js  list.js  query.js
operations/: ingest.md  lint.md
raw/sources/: 2024-05-10-INC-1234.md
scripts/: agent.py  chat_store.py  graph.py  ingest.py  lint_okf.py  logging_config.py  query.py  search_index.py
scripts/chat_storage/: common.py  mysql_store.py  sqlite_store.py
scripts/knowledge_base/: agent.py  graph.py  ingest.py  lint_okf.py  query.py
scripts/search_indexing/: common.py  mysql_backend.py  sqlite_backend.py
scripts/shared/: logging_config.py  storage_config.py
server/: server.py
server/static/: index.html
server/static/css/: styles.css
server/static/js/: chat.js  core.js  graph.js  ingest-batch.js  ingest.js  list.js  query.js
src/llm_wiki/: __init__.py
src/llm_wiki/backend/: __init__.py  app_logging.py  config.py  error_codes.py  middleware.py  response.py  schemas.py  search_sync.py  server.py
src/llm_wiki/backend/api/: __init__.py  chat.py  eval.py  graph.py  ingest.py  knowledge.py  search.py  (+1 more)
src/llm_wiki/chat/: agent.py  retriever.py
src/llm_wiki/chat_store/: __init__.py  __main__.py  base.py  common.py  mysql_store.py  sqlite_store.py
src/llm_wiki/common/: llm.py  logging_config.py  markdown_case.py  mysql_client.py  paths.py  storage_config.py
src/llm_wiki/knowledge/: agent.py  graph.py  ingest.py  lint_okf.py  query.py
src/llm_wiki/search_index/: __init__.py  __main__.py  aho_corasick.py  common.py  eval.py  mysql_backend.py  sqlite_backend.py
tests/: conftest.py  test_agent_messages.py  test_aho_corasick.py  test_chat_api_message_format.py  test_chat_feedback_api.py  test_chat_sessions_api.py  test_chat_store_mysql.py  test_chat_store_sqlite.py  test_llm_config.py  test_logging_config.py  test_markdown_case.py  test_middleware.py  test_mysql_client.py  test_paths.py  test_query_source.py  test_response.py  test_retrieval_eval.py  test_retriever.py  test_search_index.py  test_search_index_cli.py  test_search_tokens.py  test_storage_config.py
wiki/: index.md
wiki/cases/: db-connection-timeout.md  index.md
wiki/cases/_drafts/: .gitkeep
wiki/concepts/: connection-pool-exhaustion.md  index.md
(+6 files in other folders)
